--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@babel/node": "^7.25.0",
-    "express": "^4.19.2",
-    "ts-node": "^10.9.2"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
@@ -25,7 +23,8 @@
     "@types/express": "^4.17.21",
     "esrun": "^3.2.26",
     "nodemon": "^3.1.4",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
