--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "koa": "^2.15.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
@@ -21,6 +22,7 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.7",
     "@types/express": "^4.17.21",
+    "@types/koa": "^2.15.0",
     "esrun": "^3.2.26",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
