--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@hapi/hapi": "^21.3.10",
     "express": "^4.19.2",
     "koa": "^2.15.3"
   },
@@ -23,6 +24,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@types/express": "^4.17.21",
     "@types/koa": "^2.15.0",
+    "@types/hapi": "^18.0.14",
     "esrun": "^3.2.26",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
