--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
     "express": "^4.19.2",
-    "koa": "^2.15.3"
+    "koa": "^2.15.3",
+    "mongodb": "^6.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
@@ -23,8 +24,8 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.7",
     "@types/express": "^4.17.21",
-    "@types/koa": "^2.15.0",
     "@types/hapi": "^18.0.14",
+    "@types/koa": "^2.15.0",
     "esrun": "^3.2.26",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
