--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.19.2",
     "koa": "^2.15.3",
     "mongodb": "^6.8.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
@@ -29,6 +31,7 @@
     "@types/hapi": "^18.0.14",
     "@types/koa": "^2.15.0",
     "@types/mysql": "^2.15.26",
+    "@types/socket.io": "^3.0.2",
     "esrun": "^3.2.26",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
