--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "1_node-course",
   "version": "1.0.0",
+  "type": "module",
   "exports": "./index.js",
   "scripts": {
-    "run": "ts-node ./src/index.ts",
+    "run": "tsx ./src/index.ts",
     "delete_build": "del /q .\\build && del /q .\\types",
     "generate": "tsc && babel src --out-dir build --config-file ./.babelrc --extensions \".ts\" ",
-    "build": "npm run delete_build && npm run generate"
+    "build": "npm run delete_build && npm run generate",
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -27,17 +29,23 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.7",
+    "@babel/register": "^7.24.6",
+    "@types/chai": "^4.3.17",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.21",
     "@types/hapi": "^18.0.14",
     "@types/koa": "^2.15.0",
+    "@types/mocha": "^10.0.7",
     "@types/mysql": "^2.15.26",
     "@types/socket.io": "^3.0.2",
-    "esrun": "^3.2.26",
-    "nodemon": "^3.1.4",
+    "chai": "^5.1.1",
+    "mocha": "^10.7.3",
     "prettier": "^3.3.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.17.0",
+    "typescript": "^5.5.4"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": ">=16.0.0"
   }
 }
