--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "@types/mocha": "^10.0.7",
     "@types/mysql": "^2.15.26",
     "@types/socket.io": "^3.0.2",
+    "@types/supertest": "^6.0.2",
     "chai": "^5.1.1",
     "mocha": "^10.7.3",
+    "nyc": "^17.0.0",
     "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4"
